--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
+    "socket.io-client": "^2.1.0",
+    "uws": "^10.148.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b",
     "vue-youtube-embed": "^2.1.3",
     "vuetify": "^1.0.14",
     "vuex": "^3.0.1",
