--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^4.3.1",
+    "imagemin-webpack-plugin": "^2.1.5",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "node-notifier": "^5.1.2",
